depr/p1/sample_tests/pos/bracketExp.java
class Base{
	public static void main(String[] args){
		a = (1 * 1 + 3);
	}
}
