depr/p1/sample_tests/neg/intVarDecl.java
class IntVarDecl{
	public static void main(String[] args){
		in a;
		}
	}
